--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.aspose</groupId>
+			<artifactId>aspose-pdf</artifactId>
+			<version>22.11</version>
+			<classifier>jdk17</classifier>
+		</dependency>
 	</dependencies>
 
 	<build>
