Enviar email - pronto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=lowdemandasweg@gmail.com
-spring.mail.password=CV19ON18VB17
+spring.mail.password=twlgyodcsytzsiiv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
