--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=110MB
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=Preencher com dados de servidor valido
 spring.mail.port=587
-spring.mail.username=lowdemandasweg@gmail.com
-spring.mail.password=twlgyodcsytzsiiv
+spring.mail.username=Preencher com dados de servidor valido
+spring.mail.password=Preencher com dados de servidor valido
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
